--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Excursion</title>
+    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
+    <header>
+      <h1>Discover hidden places in the world around you</h1>
+    </header>
 
+    <section>
+      <a href="#">Download Excursion (Coming soon!)</a>
+    </section>
   </body>
 </html>
