--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
   <body>
     <header>
       <h1>Discover hidden places in the world around you</h1>
+      <p><a href="#">Download Excursion (Coming soon!)</a></p>
     </header>
 
     <section>
-      <a href="#">Download Excursion (Coming soon!)</a>
+      <video autoplay loop muted>
+        <source src="./resources/videos/excursion.mp4" type="video/mp4">
+      </video>
     </section>
+
+    <footer>
+      <p><img src="./resources/images/phone.png" alt="cell phone frame"></p>
+    </footer>
   </body>
 </html>
