--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       </video>
     </section>
 
+    <section>
+      <h2>Your personal travel guide</h2>
+      <p class="description">Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <img src="./resources/images/camp.jpg" alt="evening camp">
+    </section>
+
     <footer>
       <p><img src="./resources/images/phone.png" alt="cell phone frame"></p>
     </footer>
