--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
       <img src="./resources/images/camp.jpg" alt="evening camp">
     </section>
 
-    <footer>
+    <section>
       <p><img src="./resources/images/phone.png" alt="cell phone frame"></p>
+      <h2>Coming Soon for iPhone and Android</h2>
+      <p><a href="#">Download Excursion (Coming soon!)</a></p>
+    </section>
+
+    <footer>
+      <p>©️ Excursion</p>
     </footer>
   </body>
 </html>
